objects/adapps__OptimizerPlus_Hardcoded_Urls_Item__c.object
<CustomObject>
    <fields>
        <fullName>adapps__Hardcoded_Urls__c</fullName>
        <label>Hard-Coded URLs</label>
        <referenceTo>adapps__OptimizerPlus_Hardcoded_Urls__c</referenceTo>
        <relationshipLabel>Hardcoded Urls Items</relationshipLabel>
        <relationshipName>Hardcoded_Urls_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>adapps__Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adapps__Reference__c</fullName>
        <label>Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adapps__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adapps__Url__c</fullName>
        <label>Url</label>
        <type>Url</type>
    </fields>
    <label>Hardcoded Urls Item</label>
    <nameField>
        <label>Hardcoded Urls Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hardcoded Urls Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>